--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,4 +86,4 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: 'Código sin errores'
+          SLACK_MESSAGE: 'Código sin errores en la API'
