Configuracion eslit para corregir error

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,9 @@ sonar.organization=alex-charco
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# Ruta del código fuente
+sonar.sources=src
+
+# Excluir archivos generados automáticamente
+sonar.coverage.exclusions=**/src/**
