--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^6.10.0",
+    "resend": "^4.6.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
