--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
-      #- run: npm test || echo "No test files found, continuing without tests"
+      - run: npm test || echo "No test files found, continuing without tests"
 
   eslint:
     name: Run ESLint Scan
